[tool.poetry]
name = "dops"
version = "0.1.0"
description = "cli tool for CICD and cloud-ops related tasks"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.7.0"
rich = "^13.0.1"
python-dotenv = "*"
PyYAML = "^6.0"
loguru = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
